views/layout.ejs

--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -11,6 +11,21 @@
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </head>
   <body>
+    <header role = "banner">
+        <nav class="navbar navbar-default navbar-static-top">
+            <div class="container">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="/index.ejs">project namme</a>
+              </div>
+              <ul class="nav navbar-nav">
+                <li><a>LinkLink</a></li>
+                <li><a>LinkLink</a></li>
+                <li><a>LinkLink</a></li>
+              </ul>
+            </div>
+          </nav>
+    </header>
+     
       <div id="app" class="container">
         <!-- Split button -->
 <div class="btn-group pull-right">
