--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: #E6CCA6 url(../images/bj.png) repeat fixed;
+  background: #E6CCA6 url(../images/1.png) repeat fixed;
 }
 
 a {
